Fixed up user table

--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: orders
+#
+#  id                   :integer          not null, primary key
+#  customer_id          :integer
+#  customer_location_id :integer
+#  driver_id            :integer
+#  driver_location_id   :integer
+#  store_id             :integer
+#  total_price          :money
+#  created_at           :datetime         not null
+#  updated_at           :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 # This model initially had no columns defined.  If you add columns to the
