--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,10 +3,20 @@
 # Table name: users
 #
 #  id              :integer          not null, primary key
-#  email           :text
-#  password_digest :text
+#  type            :string
+#  name            :string
+#  email           :string
+#  password_digest :string
+#  address         :text
+#  longitude       :float
+#  latitude        :float
+#  balance         :money
+#  phone_number    :string
+#  image           :string
+#  description     :text
 #  created_at      :datetime         not null
 #  updated_at      :datetime         not null
+#  admin           :boolean          default("false")
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
