--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -2,15 +2,13 @@
 #
 # Table name: orders
 #
-#  id                   :integer          not null, primary key
-#  customer_id          :integer
-#  customer_location_id :integer
-#  driver_id            :integer
-#  driver_location_id   :integer
-#  store_id             :integer
-#  total_price          :money
-#  created_at           :datetime         not null
-#  updated_at           :datetime         not null
+#  id          :integer          not null, primary key
+#  customer_id :integer
+#  runner_id   :integer
+#  store_id    :integer
+#  total_price :money
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
