--- a/test/fixtures/items.yml
+++ b/test/fixtures/items.yml
@@ -8,6 +8,7 @@
 #  price       :money
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
+#  store_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
