--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -9,6 +9,7 @@
 #  total_price :money
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
+#  status      :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
